--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.airbnb.android:lottie:3.4.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
     //noinspection GradleCompatible
